/* 
  Localizable.strings
  GiniCapture

  Created by Peter Pult on 16/06/16.
  Copyright © 2016 Gini. All rights reserved.
*/

/*
 Gini Capture SDK
 ===================
 
 To easily customize texts in the Gini Capture SDK overwrite keys by your own definitions.
 For example to change the title of the camera add:
 ```
 "ginicapture.navigationbar.camera.title" = "Fotoüberweisung";
 ```
 
 All keys can be found in the `Localizable.strings` file in the Gini Capture SDK bundle
 or on [Github](https://github.com/gini/gini-capture-sdk-ios/blob/master/GiniCapture/Assets/Localizable.strings).
*/

"next" = "Weiter";
"close" = "Close";
"newDocument" = "New document";
"help" = "Help";
"analysisFailedErrorMessage" = "Dokumentanalyse fehlgeschlagen. Möchten Sie es erneut versuchen?";
"ginicapture.navigationbar.camera.title"        = "Make a picture";

