...
/* Class = "UILabel"; text = "Subtitle"; ObjectID = "QaN-K3-zRa"; */
"QaN-K3-zRa.text" = "Subtitle";

/* Class = "UILabel"; text = "Flash toggle"; ObjectID = "Swa-DX-mwh"; */
"Swa-DX-mwh.text" = "Flash toggle";

/* Class = "UIButton"; normalTitle = "Screen API"; ObjectID = "ZlJ-hw-K1e"; */
"ZlJ-hw-K1e.normalTitle" = "Screen API";

/* Class = "UILabel"; text = "Open with"; ObjectID = "cVO-kR-liJ"; */
"cVO-kR-liJ.text" = "Open with";

/* Class = "UILabel"; text = "Bitte beachten Sie:"; ObjectID = "dWP-XX-MgH"; */
...
